# kindle-notion

./: .gitignore  Cargo.toml  README.md  help.txt  package-lock.json  package.json  tsconfig.json
built/: cli.js  index.js  parseClipping.js
src/: cli.ts  global.d.ts  index.ts  lib.rs  main.rs  parseClipping.ts
